@@ -61,7 +61,7 @@ class FL_EXPORT Fl_File_Chooser {open
       callback {fileName->value("");
 fileList->deselect();
 Fl::remove_timeout((Fl_Timeout_Handler)previewCB, this);
-window->hide();}
+window->hide();} open
       private xywh {388 284 490 380} type Double resizable
       code0 {if (title) window->label(title);}
       code1 {\#include <stdio.h>}
@@ -100,11 +100,11 @@ window->hide();}
           code0 {\#include <FL/Fl_File_Browser.H>}
         }
         Fl_Box previewBox {
-          label {?}
+          label {?} selected
           private xywh {305 45 175 225} box DOWN_BOX labelsize 100 align 80
         }
       }
-      Fl_Group {} {
+      Fl_Group {} {open
         private xywh {10 275 470 95}
       } {
         Fl_Group {} {open
@@ -123,7 +123,7 @@ window->hide();}
         Fl_File_Input fileName {
           callback {fileNameCB();}
           private xywh {115 300 365 35} labelfont 1 when 8 resizable
-          code0 {fileName->when(FL_WHEN_CHANGED | FL_WHEN_ENTER_KEY_ALWAYS);}
+          code0 {fileName->when(FL_WHEN_CHANGED | FL_WHEN_ENTER_KEY);}
         }
         Fl_Box {} {
           label {Filename:}
@@ -220,8 +220,7 @@ type(t);
 int e;
 prefs_.get("preview", e, 1);
 preview(e);
-Fl_Group::current(prev_current);} {selected
-    }
+Fl_Group::current(prev_current);} {}
   }
   Function {~Fl_File_Chooser()} {} {
     code {Fl::remove_timeout((Fl_Timeout_Handler)previewCB, this);
