@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.9
 
+	- Fixed multiple selction of files and directories in
+	  Fl_File_Chooser
 	- Fixed MSWindows crash when selecting umlauts
 	  in Fl_Help_View
 
